@@ -86,4 +86,19 @@ public class UrlVFS extends VFS
 			return null;
 		}
 	} //}}}
+
+	//{{{ getFilePath() method
+	@Override
+	public String getFilePath(String vfsPath)
+	{
+		try
+		{
+			return new URL(vfsPath).getPath();
+		}
+		catch (MalformedURLException mue)
+		{
+			Log.log(Log.ERROR,this,mue);
+			return super.getFilePath(vfsPath);
+		}
+	} //}}}
 }
